# xfetch

./: .gitignore  Cargo.toml  README.md
src/: main.cpp  main.rs
