[package]
name = "xfetch"
version = "0.1.0"
authors = ["Neo Mannskär <neo.mannskar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
fs_extra = "1.3"
winapi = { version = "0.3", features = ["winuser", "shellapi", "processthreadsapi", "securitybaseapi", "handleapi"] }

[build-dependencies]
winapi = "0.3"
